feat: add list courses endpoint
