# src/routes/course.routes.ts
@@ -6,6 +6,7 @@ import { authMiddleware } from '@middlewares/auth.middleware'
 import { Roles } from '@core/interfaces/roles'
 import { bodyValidator } from '@middlewares/body-validator.middleware'
 import { createCourseSchema } from '@middlewares/validators/course/create.validator'
+import { ListCoursesSchema } from '@middlewares/validators/course/list.validator'
 
 const courseRoutes = Router()
 
@@ -16,6 +17,13 @@ courseRoutes.post(
   authMiddleware([Roles.MANAGER]),
   bodyValidator(createCourseSchema),
   httpHandler(courseController.create.bind(courseController))
+)
+
+courseRoutes.get(
+  '/:institutionId/courses',
+  authMiddleware([Roles.ADMIN, Roles.MANAGER]),
+  bodyValidator(ListCoursesSchema),
+  httpHandler(courseController.list.bind(courseController))
 )
 
 export { courseRoutes }
