# swagger.json
@@ -19,6 +19,14 @@
     {
       "name": "Institutions",
       "description": "Ações referentes a instituições"
+    },
+    {
+      "name": "Courses",
+      "description": "Ações referentes aos cursos"
+    },
+    {
+      "name": "Users",
+      "description": "Ações e detalhes referentes aos usuários"
     }
   ],
   "paths": {
@@ -714,6 +722,314 @@
                     "message": {
                       "type": "string",
                       "example": "SERVER_ERROR_ON_UPDATE_INSTITUTION"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/institution/{institutionId}/courses": {
+      "get": {
+        "summary": "Listar cursos de uma instituição",
+        "description": "Rota exclusiva para administradores e gestores",
+        "tags": [
+          "Courses"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "search",
+            "schema": {
+              "type": "string",
+              "example": "eng"
+            },
+            "description": "Padrão é vazio."
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "number"
+            },
+            "description": "Listagem paginada. Página padrão: 1"
+          },
+          {
+            "in": "query",
+            "name": "count",
+            "schema": {
+              "type": "number"
+            },
+            "description": "Items por página padrão: 10"
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "page": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "count": {
+                      "type": "number",
+                      "example": 10
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "number",
+                            "example": 1
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "Engenharia eletrônica"
+                          },
+                          "description": {
+                            "type": "string",
+                            "example": null
+                          },
+                          "institutionId": {
+                            "type": "number",
+                            "example": 1
+                          },
+                          "coordinatorId": {
+                            "type": "number",
+                            "example": 1
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "example": "2023-02-25T22:35:16.978Z"
+                          },
+                          "updatedAt": {
+                            "type": "string",
+                            "example": "2023-02-25T22:35:16.978Z"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Criar novo curso",
+        "description": "Rota exclusiva para gestores",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name",
+                  "coordinatorId"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "TADS"
+                  },
+                  "coordinatorId": {
+                    "type": "number",
+                    "example": 1
+                  },
+                  "description": {
+                    "type": "string",
+                    "example": "É um cursinho aí..."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Cadastrado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateEntity"
+                }
+              }
+            }
+          }
+        }
+      },
+      "/user/whoami": {
+        "get": {
+          "tags": [
+            "Users"
+          ],
+          "security": [
+            {
+              "bearer": []
+            }
+          ],
+          "summary": "Resgatar dados do usuário",
+          "description": "Dados pessoais do usuário e suas respectivas roles",
+          "responses": {
+            "200": {
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "number",
+                            "example": 1
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "Tenessey Stormborn"
+                          },
+                          "username": {
+                            "type": "string",
+                            "example": "tessey"
+                          },
+                          "email": {
+                            "type": "string",
+                            "example": "winterscommin@yahoo.com"
+                          },
+                          "cpf": {
+                            "type": "string",
+                            "example": "46508503049"
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "example": "2023-02-25T22:33:16.169Z"
+                          },
+                          "updatedAt": {
+                            "type": "string",
+                            "example": "2023-02-25T22:33:16.169Z"
+                          }
+                        }
+                      },
+                      "roles": {
+                        "type": "array",
+                        "items": {
+                          "oneOf": [
+                            {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "example": "admin"
+                                }
+                              }
+                            },
+                            {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "example": "manager"
+                                },
+                                "institutionId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "institutionName": {
+                                  "type": "string",
+                                  "example": "Instituto Federal de Tecnologia e Ciências sul-riograndense"
+                                },
+                                "institutionNickname": {
+                                  "type": "string",
+                                  "example": "ifsul"
+                                }
+                              }
+                            },
+                            {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "example": "coordinator"
+                                },
+                                "institutionId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "institutionName": {
+                                  "type": "string",
+                                  "example": "Instituto Federal de Tecnologia e Ciências sul-riograndense"
+                                },
+                                "institutionNickname": {
+                                  "type": "string",
+                                  "example": "ifsul"
+                                },
+                                "courseId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "courseName": {
+                                  "type": "string",
+                                  "example": "TADS"
+                                }
+                              }
+                            },
+                            {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "example": "student"
+                                },
+                                "institutionId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "institutionName": {
+                                  "type": "string",
+                                  "example": "Instituto Federal de Tecnologia e Ciências sul-riograndense"
+                                },
+                                "institutionNickname": {
+                                  "type": "string",
+                                  "example": "ifsul"
+                                },
+                                "registrationId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "courseId": {
+                                  "type": "number",
+                                  "example": 1
+                                },
+                                "courseName": {
+                                  "type": "string",
+                                  "example": "TADS"
+                                }
+                              }
+                            }
+                          ]
+                        }
+                      }
                     }
                   }
                 }
